--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -15,4 +15,11 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTO\" />
+      <Folder Include="Entities\" />
+      <Folder Include="Models\" />
+      <Folder Include="ViewModels\" />
+    </ItemGroup>
+
 </Project>
