Setting up database and server side code

--- a/NefroAssist/appsettings.json
+++ b/NefroAssist/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost;Port=5432;Database=Prva_baza;User Id=postgres;Password=Jelsa123!;TrustServerCertificate=True;"
+  }
 }
